[package]
name = "dump_btrfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
crc = "3.0.0"
env_logger = "0.10.0"
hex = "0.4.3"
ioctls = "0.6.1"
libc = "0.2.139"
log = "0.4.17"
more-asserts = "0.3.1"
static_assertions = "1.1.0"
sysconf = "0.3.4"
